--- a/src/main/resources/com/example/insurancesystem/welcome.fxml
+++ b/src/main/resources/com/example/insurancesystem/welcome.fxml
@@ -56,7 +56,7 @@
                   <Font name="Verdana" size="13.0" />
                </font>
             </Button>
-            <Button fx:id="policyInfoButton" layoutX="113.0" layoutY="332.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="199.0" style="-fx-background-color: #64CCC5;" text="Retrieve Policy Info" textFill="WHITE">
+            <Button fx:id="policyInfoButton" layoutX="113.0" layoutY="332.0" mnemonicParsing="false" onAction="#toPolicyInfoRetrieval" prefHeight="38.0" prefWidth="199.0" style="-fx-background-color: #64CCC5;" text="Retrieve Policy Info" textFill="WHITE">
                <font>
                   <Font name="Verdana" size="13.0" />
                </font>
