--- a/src/main/resources/com/example/insurancesystem/productEntry.fxml
+++ b/src/main/resources/com/example/insurancesystem/productEntry.fxml
@@ -5,25 +5,58 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.insurancesystem.InsuranceController">
    <left>
-      <AnchorPane prefHeight="600.0" prefWidth="378.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="799.0" style="-fx-background-color: #04364A;" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="163.0" layoutY="48.0" text="Enter Product info" />
-            <Label layoutX="98.0" layoutY="111.0" text="Product ID" />
-            <Label layoutX="98.0" layoutY="141.0" text="Product Name" />
-            <Label layoutX="98.0" layoutY="173.0" text="Type" />
-            <Label layoutX="98.0" layoutY="213.0" text="Policy Number" />
-            <Label layoutX="98.0" layoutY="246.0" text="Area Name" />
-            <Button fx:id="goBackButton" layoutX="34.0" layoutY="529.0" mnemonicParsing="false" onAction="#toLandingPage" text="Go Back" />
-            <Button fx:id="submitProductInfoButton" layoutX="111.0" layoutY="304.0" mnemonicParsing="false" onAction="#submitProductInfo" text="Submit" />
-            <TextField fx:id="productIDTextField" layoutX="190.0" layoutY="107.0" />
-            <TextField fx:id="productNameTextField" layoutX="204.0" layoutY="146.0" />
-            <TextField fx:id="productTypeTextField" layoutX="180.0" layoutY="177.0" />
-            <TextField fx:id="policyNoTextField" layoutX="204.0" layoutY="209.0" />
-            <TextField fx:id="areaTextField" layoutX="180.0" layoutY="242.0" />
+            <Label layoutX="320.0" layoutY="56.0" text="Enter Product info" textFill="WHITE">
+               <font>
+                  <Font name="Verdana Bold" size="16.0" />
+               </font>
+            </Label>
+            <Label layoutX="182.0" layoutY="141.0" text="Product ID" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="158.0" layoutY="195.0" text="Product Name" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="223.0" layoutY="244.0" text="Type" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="158.0" layoutY="295.0" text="Policy Number" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="180.0" layoutY="344.0" text="Area Name" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Label>
+            <Button fx:id="goBackButton" layoutX="272.0" layoutY="386.0" mnemonicParsing="false" onAction="#toLandingPage" prefHeight="33.0" prefWidth="78.0" style="-fx-background-color: #64CCC5;" text="Go Back" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Button>
+            <Button fx:id="submitProductInfoButton" layoutX="459.0" layoutY="386.0" mnemonicParsing="false" onAction="#submitProductInfo" prefHeight="33.0" prefWidth="78.0" style="-fx-background-color: #64CCC5;" text="Submit" textFill="WHITE">
+               <font>
+                  <Font name="Verdana" size="14.0" />
+               </font>
+            </Button>
+            <TextField fx:id="productIDTextField" layoutX="272.0" layoutY="136.0" prefHeight="33.0" prefWidth="263.0" promptText="Product ID" />
+            <TextField fx:id="productNameTextField" layoutX="272.0" layoutY="186.0" prefHeight="33.0" prefWidth="263.0" promptText="Product Name" />
+            <TextField fx:id="productTypeTextField" layoutX="272.0" layoutY="236.0" prefHeight="33.0" prefWidth="263.0" promptText="Product Type" />
+            <TextField fx:id="policyNoTextField" layoutX="272.0" layoutY="286.0" prefHeight="33.0" prefWidth="263.0" promptText="Policy Number" />
+            <TextField fx:id="areaTextField" layoutX="272.0" layoutY="336.0" prefHeight="33.0" prefWidth="263.0" promptText="Business Area Name" />
          </children>
       </AnchorPane>
    </left>
